actual fix for all overflowing images in form editor

--- a/assets/admin_quiz_styles.css
+++ b/assets/admin_quiz_styles.css
@@ -24,7 +24,7 @@
     cursor: pointer;
 }
 
-.gfield_image_label img {
+.gfield_image_label img, .gfield_radio img, .gfield_checkbox img {
     max-width: 100%;
     height: auto;
 }
